--- a/app/src/main/res/layout/activity_butter_knife_test.xml
+++ b/app/src/main/res/layout/activity_butter_knife_test.xml
@@ -16,4 +16,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+
+    <TextView
+        android:id="@+id/tv_show_info_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="信息显示2"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="35dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 </android.support.constraint.ConstraintLayout>
