--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
+    android:orientation="vertical"
     tools:context="com.android.study.example.MainActivity">
 
     <Button
@@ -11,10 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="butterknife 测试"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         />
 
     <Button
@@ -22,10 +20,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="mybutterknife 测试"
-        android:layout_marginLeft="167dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_okhttp_sync"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OkHttp-同步"/>
+
+    <Button
+        android:id="@+id/btn_okhttp_async"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OkHttp-异步"/>
+
+</LinearLayout>
