--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,13 @@
         />
 
     <Button
+        android:id="@+id/btn_androidapi_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Android API 测试"
+        />
+
+    <Button
         android:id="@+id/btn_okhttp_sync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
