--- a/myaidlclient/src/main/res/layout/activity_aidl_client_second_test.xml
+++ b/myaidlclient/src/main/res/layout/activity_aidl_client_second_test.xml
@@ -4,13 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp">
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center"
-        android:text="aidl 第一个测试页面"/>
-
+        android:text="aidl 第二个测试页面"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="44dp"
@@ -41,11 +39,5 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="显示结果"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="跳转下一个页面"
-        android:onClick="onClickNextActivityBtn"/>
 
 </LinearLayout>
