--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,10 @@
         android:layout_height="wrap_content"
         android:text="OkHttp-异步"/>
 
+    <Button
+        android:id="@+id/btn_blu_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="蓝牙测试"/>
+
 </LinearLayout>
