--- a/app/src/main/res/layout/activity_android_api_test.xml
+++ b/app/src/main/res/layout/activity_android_api_test.xml
@@ -38,6 +38,24 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_write_file"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="写文件"/>
+        <Button
+            android:id="@+id/btn_read_file"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="读文件"/>
+
+    </LinearLayout>
+
     <Button
         android:layout_width="180dp"
         android:layout_height="wrap_content"
