获取apk 包信息和文件路径信息等

--- a/app/src/main/res/layout/activity_android_api_test.xml
+++ b/app/src/main/res/layout/activity_android_api_test.xml
@@ -55,6 +55,24 @@
             android:text="读文件"/>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_package_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="获取package 相关信息"/>
+
+        <Button
+            android:id="@+id/btn_app_file_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="获取app 文件路径相关信息"/>
+
+    </LinearLayout>
 
     <Button
         android:layout_width="180dp"
