--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,10 @@
         android:layout_height="wrap_content"
         android:text="蓝牙测试"/>
 
+    <Button
+        android:id="@+id/btn_leak_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="内存泄漏测试"/>
+
 </LinearLayout>
