--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,10 @@
         android:layout_height="wrap_content"
         android:text="内存泄漏测试"/>
 
+    <Button
+        android:id="@+id/btn_dragging_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="悬浮按钮测试"/>
+
 </LinearLayout>
