--- a/app/src/main/res/layout/activity_floating_action_btn_test.xml
+++ b/app/src/main/res/layout/activity_floating_action_btn_test.xml
@@ -4,13 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".uidemo.dragging.FloatingActionBtnTestActivity">
 
     <com.android.study.example.uidemo.dragging.DraggingButton
         android:id="@+id/tv_dragging"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:text="悬浮按钮"/>
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:gravity="center"
+        android:background="@drawable/drag_button_bg"
+        android:layout_margin="20dp"
+        android:padding="10dp"
+        android:text="悬浮\n按钮1"
+        android:textSize="15sp"
+        android:layout_gravity="right"
+        android:textColor="#ffffff"/>
 
 </LinearLayout>
