获取运营商相关信息

--- a/app/src/main/res/layout/activity_android_api_test.xml
+++ b/app/src/main/res/layout/activity_android_api_test.xml
@@ -84,6 +84,11 @@
             android:layout_height="wrap_content"
             android:text="测试手机是否具有NFC"/>
 
+        <Button
+            android:id="@+id/btn_test_operators"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="测试手机运营商信息"/>
 
     </LinearLayout>
 
