--- a/app/src/main/res/layout/activity_audio_demo_test.xml
+++ b/app/src/main/res/layout/activity_audio_demo_test.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context=".androidapi.AudioDemoTestActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MediaPlayer 测试"
+        android:textColor="#333333"
+        android:textSize="16sp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -21,6 +27,28 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="结束播放"/>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MediaRecorder 测试"
+        android:textColor="#333333"
+        android:textSize="16sp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_audio_start_audio"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="开始录音"/>
+        <Button
+            android:id="@+id/btn_audio_stop_audio"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="结束录音"/>
     </LinearLayout>
 
 </LinearLayout>
