--- a/app/src/main/res/layout/activity_audio_demo_test.xml
+++ b/app/src/main/res/layout/activity_audio_demo_test.xml
@@ -40,12 +40,34 @@
         android:layout_height="60dp"
         android:orientation="horizontal">
         <Button
-            android:id="@+id/btn_audio_start_audio"
+            android:id="@+id/btn_audio_start_media_recorder"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="开始录音"/>
         <Button
-            android:id="@+id/btn_audio_stop_audio"
+            android:id="@+id/btn_audio_stop_media_recorder"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="结束录音"/>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AudioRecord 测试"
+        android:textColor="#333333"
+        android:textSize="16sp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btn_audio_start_audio_recorder"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="开始录音"/>
+        <Button
+            android:id="@+id/btn_audio_stop_audio_recorder"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="结束录音"/>
