--- a/app/src/main/res/layout/activity_android_api_test.xml
+++ b/app/src/main/res/layout/activity_android_api_test.xml
@@ -91,6 +91,18 @@
             android:text="测试手机运营商信息"/>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_test_wifi_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="获取手机wifi信息"/>
+
+    </LinearLayout>
 
     <Button
         android:layout_width="180dp"
