--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,13 @@
             android:text="SurfaceViewDemoTest"
             android:textAllCaps="false"/>
 
+        <Button
+            android:id="@+id/btn_books_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="读书笔记"
+            android:textAllCaps="false"/>
+
     </LinearLayout>
 </ScrollView>
 
