--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,13 @@
             android:text="View Event Trans 测试"
             android:textAllCaps="false"/>
 
+        <Button
+            android:id="@+id/btn_self_define_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="自定义View 测试"
+            android:textAllCaps="false"/>
+
     </LinearLayout>
 </ScrollView>
 
