--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,6 +100,13 @@
             android:textAllCaps="false"/>
 
         <Button
+            android:id="@+id/btn_animation_demo_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Animation 动画 测试"
+            android:textAllCaps="false"/>
+
+        <Button
             android:id="@+id/btn_self_define_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
