--- a/app/src/main/res/layout/activity_map_view_demo.xml
+++ b/app/src/main/res/layout/activity_map_view_demo.xml
@@ -36,13 +36,8 @@
             <com.android.study.example.uidemo.mapsweeper.ZoomMapSweeperView
                 android:id="@+id/zoom_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.android.study.example.uidemo.mapsweeper.MapSweeperView
-                    android:id="@+id/map_sweeper_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
+                android:layout_height="200dp"
+                android:background="#1dc58a">
 
             </com.android.study.example.uidemo.mapsweeper.ZoomMapSweeperView>
 
